ChangeLog for herdstat

2005-04-07 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_misc.cc, lib/portage_misc.hh, src/categories.hh,
	src/action_meta_handler.cc: Moved categories_T to portage namespace.
	Also moved get_possibles() to portage::find_package().
	* lib/portage_version.cc, lib/portage_version.hh: Added
	version_string_T and the plural version versions_T.
	* lib/string.cc, lib/string.hh: Added vec2str() for converting a
	vector of strings into a string delimited by the specified delimiter.
	* lib/portage_misc.cc, lib/portage_misc.hh, lib/portage_config.cc,
	lib/portage_config.hh: Put portage stuff into it's own namespace.
	* lib/file.cc, lib/file.hh: delete stream on close(). Also added
	chop_fileext() for chopping file extensions.
	* lib/vars.cc: Modified read() to open stream if stream is NULL.
	* lib/portage_config.hh: Rename portage_config_T to config_T now that
	it resides in the portage namespace.  Modified config_T to work nicely
	with new modified vars_T.
	* src/herdstat.cc: Removed errant duplicate formatter_T declaration.
	Also moved the very large try...catch block for fetching herds.xml to
	it's own function, fetch_herds_xml().
	* src/action_pkg_handler.cc: Fix bug where progress was displayed if
	-pq <non-existent> was specified.
	* src/formatter.cc, src/formatter.hh: Added quiet_delim member to
	formatter_T::attrs_T for allowing the caller to choose which delimiter
	is used in quiet output (defaults to '\n').
	* src/action_meta_handler.cc: Removed all the special quiet code that
	was required before formatter_T's quiet_delim member was added.

2005-04-06 Aaron Walker <ka0ttic@gentoo.org>

	* lib/file.cc, lib/file.hh: Finished up file_T methods.
	* src/categories.hh, src/cache.hh, src/action_meta_handler.cc,
	src/metadatas.cc, src/metadatas.hh: Updated to use file_T/dir_T.

2005-04-05 Aaron Walker <ka0ttic@gentoo.org>

	* tags/release-1.0.3: copy tags/release-1.0.2 and backport bug fixes.