@@ -58,25 +58,16 @@ namespace util
 
     enum type_T { FTYPE_FILE, FTYPE_DIR };
 
-    class path_T
+    /* Represents a path to a file object */
+    class path_T : public std::string
     {
-        protected:
-            const std::string _path;
-
         public:
-            typedef std::string::iterator  iterator;
-            typedef std::string::size_type size_type;
+            explicit path_T() : std::string() { }
+            path_T(const char *n) : std::string(n) { }
+            path_T(const std::string &n) : std::string(n) { }
 
-            path_T(const char *path) : _path(path) { }
-            path_T(const std::string &path) : _path(path) { }
-
-            iterator begin() { return _path.begin(); }
-            iterator end() { return _path.end(); }
-            size_type size() const { return _path.size(); }
-
-            const std::string &operator() () const { return _path; }
-            const std::string basename() const { return util::basename(_path); }
-            const std::string dirname() const { return util::dirname(_path); }
+            const std::string basename() const { return util::basename(*this); }
+            const std::string dirname() const { return util::dirname(*this); }
     };
 
     /* generic file object */
@@ -100,9 +91,9 @@ namespace util
             typedef blkcnt_t blkcnt_type;
 
             fileobject_T(type_T t) : _type(t) { }
-            fileobject_T(const char *n, type_T t) : _name(n), _type(t)
+            fileobject_T(const char *n, type_T t) : _path(n), _type(t)
             { this->stat(); }
-            fileobject_T(const std::string &n, type_T t) : _name(n), _type(t)
+            fileobject_T(const std::string &n, type_T t) : _path(n), _type(t)
             { this->stat(); }
             virtual ~fileobject_T() { }
 
@@ -118,7 +109,7 @@ namespace util
             blksize_type blksize() const { return _sbuf.st_blksize; }
             blkcnt_type blkcnt() const { return _sbuf.st_blocks; }
 
-            std::string &name() { return _name; }
+            std::string &name() { return _path; }
             std::string basename() const { return _path.basename(); }
             std::string dirname() const { return _path.dirname(); }
             type_T type() const { return _type; }
@@ -126,7 +117,7 @@ namespace util
 
             void stat()
             {
-                _exists = ( ::stat(_name.c_str(), &_sbuf) == 0 ? true : false );
+                _exists = ( ::stat(_path.c_str(), &_sbuf) == 0 ? true : false );
             }
 
             virtual void display(std::ostream &) { }
@@ -162,11 +153,11 @@ namespace util
             size_type bufsize() const { return _contents.size(); }
             void push_back(const std::string &s) { _contents.push_back(s); }
 
-            virtual void open() { this->open(_name.c_str(), DEFAULT_MODE); }
+            virtual void open() { this->open(_path.c_str(), DEFAULT_MODE); }
             virtual void open(const char *n,
                 std::ios_base::openmode mode = DEFAULT_MODE);
             virtual void open(std::ios_base::openmode mode)
-            { this->open(_name.c_str(), mode); }
+            { this->open(_path.c_str(), mode); }
 
             virtual void close();
 
@@ -198,19 +189,13 @@ namespace util
 
             base_dir_T(const char *n, bool r = false)
                 : fileobject_T(n, FTYPE_DIR), _recurse(r), _dir(NULL)
-            {
-                this->open();
-                this->read();
-            }
+            { this->open(); }
 
             base_dir_T(const std::string &n, bool r = false)
                 : fileobject_T(n, FTYPE_DIR), _recurse(r), _dir(NULL)
-            {
-                this->open();
-                this->read();
-            }
+            { this->open(); }
 
-            virtual ~base_dir_T() { }
+            virtual ~base_dir_T() { this->close(); }
 
             /* small subset of vector methods */
             iterator begin() { return _contents.begin(); }
@@ -220,7 +205,7 @@ namespace util
             virtual void open();
             virtual void open(const char *n)
             {
-                _name.assign(n);
+                _path.assign(n);
                 this->stat();
                 this->open();
             }
@@ -237,25 +222,24 @@ namespace util
         public:
 
             dirobject_T(const char *n, bool r = false)
-                : base_dir_T<fileobject_T * >(n, r) { }
+                : base_dir_T<fileobject_T * >(n, r) { this->read(); }
             dirobject_T(const std::string &n, bool r = false)
-                : base_dir_T<fileobject_T * >(n, r) { }
+                : base_dir_T<fileobject_T * >(n, r) { this->read(); }
             virtual ~dirobject_T();
             virtual void read();
             virtual void display(std::ostream &);
     };
 
-    /* acts as a DIR * / struct dirent wrapper
-     * (only provides the filename) instead of
-     * creating fileobject_T objects for each
-     * child like dirobject_T */
-    class dir_T : public base_dir_T<std::string>
+    /* acts as a DIR/dirent wrapper (only provides
+     * the filename) instead of creating fileobject_T
+     * objects for each child like dirobject_T */
+    class dir_T : public base_dir_T<path_T>
     {
         public:
             dir_T(const char *n, bool r = false)
-                : base_dir_T<std::string>(n, r) { }
+                : base_dir_T<path_T>(n, r) { this->read(); }
             dir_T(const std::string &n, bool r = false) 
-                : base_dir_T<std::string>(n, r) { }
+                : base_dir_T<path_T>(n, r) { this->read(); }
             virtual ~dir_T() { }
             virtual void read();
     };
